--- a/src/app/device/device.component.html
+++ b/src/app/device/device.component.html
@@ -8,8 +8,7 @@
             <div class="card-body">
                 <div class="mb-3 d-flex align-items-start justify-content-between">
                     <div> <span class="text-fixed-white fs-11">New Events</span>
-                        <h4 class="text-fixed-white mb-0">13,278<span class="text-success fs-12 ms-2 fw-semibold d-inline-block"><i class="ti ti-trending-up align-middle me-1 d-inline-block"></i>0.25%</span>
-                        </h4>
+                        <h4 class="text-fixed-white mb-0">13,278<span class="text-success fs-12 ms-2 fw-semibold d-inline-block"><i class="ti ti-trending-up align-middle me-1 d-inline-block"></i>0.25%</span> </h4>
                     </div>
                     <div class="dropdown"> <a aria-label="anchor" href="javascript:void(0);" data-bs-toggle="dropdown" class="op-4" aria-expanded="false"> <i class="bi bi-grid text-primary"></i> </a>
                         <ul class="dropdown-menu" role="menu" style="">
